internal/vm/y.output

state 0
	$accept: .start $end 
	stmt_list: .    (2)

	.  reduce 2 (src line 87)

	stmt_list  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  stmt_list.    (1)
	stmt_list:  stmt_list.stmt 
	hide_spec: .    (88)
	mark_pos: .    (108)

	$end  reduce 1 (src line 80)
	INVALID  shift 13
	CONST  shift 11
	HIDDEN  shift 24
	DEF  reduce 108 (src line 574)
	DEL  shift 20
	NEXT  shift 10
	OTHERWISE  shift 15
	STOP  shift 12
	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	DECO  reduce 108 (src line 574)
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	DIV  reduce 108 (src line 574)
	NOT  shift 40
	LPAREN  shift 36
	NL  shift 16
	.  reduce 88 (src line 458)

	stmt  goto 3
	conditional_statement  goto 4
	expression_statement  goto 5
	expr  goto 17
	primary_expr  goto 27
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 28
	assign_expr  goto 23
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 21
	logical_expr  goto 14
	indexed_expr  goto 31
	id_expr  goto 43
	concat_expr  goto 30
	pattern_expr  goto 26
	declaration  goto 6
	definition  goto 7
	decoration_statement  goto 8
	regex_pattern  goto 42
	match_expr  goto 22
	delete_statement  goto 9
	hide_spec  goto 18
	mark_pos  goto 19

state 3
	stmt_list:  stmt_list stmt.    (3)

	.  reduce 3 (src line 92)


state 4
	stmt:  conditional_statement.    (4)

	.  reduce 4 (src line 101)


state 5
	stmt:  expression_statement.    (5)

	.  reduce 5 (src line 104)


state 6
	stmt:  declaration.    (6)

	.  reduce 6 (src line 106)


state 7
	stmt:  definition.    (7)

	.  reduce 7 (src line 108)


state 8
	stmt:  decoration_statement.    (8)

	.  reduce 8 (src line 110)


state 9
	stmt:  delete_statement.    (9)

	.  reduce 9 (src line 112)


state 10
	stmt:  NEXT.    (10)

	.  reduce 10 (src line 114)


state 11
	stmt:  CONST.id_expr concat_expr 

	ID  shift 45
	.  error

	id_expr  goto 46

state 12
	stmt:  STOP.    (12)

	.  reduce 12 (src line 122)


state 13
	stmt:  INVALID.    (13)

	.  reduce 13 (src line 126)


state 14
	conditional_statement:  logical_expr.compound_statement ELSE compound_statement 
	conditional_statement:  logical_expr.compound_statement 
	assign_expr:  logical_expr.    (21)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 50
	OR  shift 51
	LCURLY  shift 49
	.  reduce 21 (src line 171)

	compound_statement  goto 47
	logical_op  goto 48

state 15
	conditional_statement:  OTHERWISE.compound_statement 

	LCURLY  shift 49
	.  error

	compound_statement  goto 52

state 16
	expression_statement:  NL.    (17)

	.  reduce 17 (src line 152)


state 17
	expression_statement:  expr.NL 

	NL  shift 53
	.  error


state 18
	declaration:  hide_spec.type_spec declarator 

	COUNTER  shift 55
	GAUGE  shift 56
	TIMER  shift 57
	TEXT  shift 58
	.  error

	type_spec  goto 54

state 19
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 
	definition:  mark_pos.DEF ID compound_statement 
	decoration_statement:  mark_pos.DECO compound_statement 

	DEF  shift 60
	DECO  shift 61
	DIV  shift 59
	.  error


state 20
	delete_statement:  DEL.postfix_expr AFTER DURATIONLITERAL 
	delete_statement:  DEL.postfix_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	postfix_expr  goto 62
	indexed_expr  goto 31
	id_expr  goto 43

state 21
	logical_expr:  bitwise_expr.    (24)
	bitwise_expr:  bitwise_expr.bitwise_op opt_nl rel_expr 

	BITAND  shift 65
	XOR  shift 67
	BITOR  shift 66
	.  reduce 24 (src line 186)

	bitwise_op  goto 64

state 22
	logical_expr:  match_expr.    (25)

	.  reduce 25 (src line 189)


state 23
	expr:  assign_expr.    (20)

	.  reduce 20 (src line 166)


state 24
	hide_spec:  HIDDEN.    (89)

	.  reduce 89 (src line 463)


state 25
	bitwise_expr:  rel_expr.    (30)
	rel_expr:  rel_expr.rel_op opt_nl shift_expr 

	LT  shift 69
	GT  shift 70
	LE  shift 71
	GE  shift 72
	EQ  shift 73
	NE  shift 74
	.  reduce 30 (src line 208)

	rel_op  goto 68

state 26
	match_expr:  pattern_expr.    (49)

	.  reduce 49 (src line 275)


state 27
	match_expr:  primary_expr.match_op opt_nl pattern_expr 
	match_expr:  primary_expr.match_op opt_nl primary_expr 
	postfix_expr:  primary_expr.    (68)

	MATCH  shift 76
	NOT_MATCH  shift 77
	.  reduce 68 (src line 351)

	match_op  goto 75

state 28
	assign_expr:  unary_expr.ASSIGN opt_nl logical_expr 
	assign_expr:  unary_expr.ADD_ASSIGN opt_nl logical_expr 
	multiplicative_expr:  unary_expr.    (60)

	ADD_ASSIGN  shift 79
	ASSIGN  shift 78
	.  reduce 60 (src line 322)


state 29
	rel_expr:  shift_expr.    (35)
	shift_expr:  shift_expr.shift_op opt_nl additive_expr 

	SHL  shift 81
	SHR  shift 82
	.  reduce 35 (src line 226)

	shift_op  goto 80

state 30
	pattern_expr:  concat_expr.    (54)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 83
	.  reduce 54 (src line 295)


state 31
	primary_expr:  indexed_expr.    (72)
	indexed_expr:  indexed_expr.LSQUARE arg_expr_list RSQUARE 

	LSQUARE  shift 84
	.  reduce 72 (src line 367)


state 32
	primary_expr:  BUILTIN.LPAREN RPAREN 
	primary_expr:  BUILTIN.LPAREN arg_expr_list RPAREN 

	LPAREN  shift 85
	.  error


state 33
	primary_expr:  CAPREF.    (75)

	.  reduce 75 (src line 378)


state 34
	primary_expr:  CAPREF_NAMED.    (76)

	.  reduce 76 (src line 382)


state 35
	primary_expr:  STRING.    (77)

	.  reduce 77 (src line 386)


state 36
	primary_expr:  LPAREN.expr RPAREN 
	mark_pos: .    (108)

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  reduce 108 (src line 574)

	expr  goto 86
	primary_expr  goto 27
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 28
	assign_expr  goto 23
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 21
	logical_expr  goto 87
	indexed_expr  goto 31
	id_expr  goto 43
	concat_expr  goto 30
	pattern_expr  goto 26
	regex_pattern  goto 42
	match_expr  goto 22
	mark_pos  goto 88

state 37
	primary_expr:  INTLITERAL.    (79)

	.  reduce 79 (src line 394)


state 38
	primary_expr:  FLOATLITERAL.    (80)

	.  reduce 80 (src line 398)


state 39
	unary_expr:  postfix_expr.    (66)
	postfix_expr:  postfix_expr.postfix_op 

	INC  shift 90
	DEC  shift 91
	.  reduce 66 (src line 342)

	postfix_op  goto 89

state 40
	unary_expr:  NOT.unary_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	postfix_expr  goto 39
	unary_expr  goto 92
	indexed_expr  goto 31
	id_expr  goto 43

state 41
	shift_expr:  additive_expr.    (43)
	additive_expr:  additive_expr.add_op opt_nl multiplicative_expr 

	MINUS  shift 95
	PLUS  shift 94
	.  reduce 43 (src line 250)

	add_op  goto 93

state 42
	concat_expr:  regex_pattern.    (55)

	.  reduce 55 (src line 302)


state 43
	indexed_expr:  id_expr.    (81)

	.  reduce 81 (src line 404)


state 44
	additive_expr:  multiplicative_expr.    (47)
	multiplicative_expr:  multiplicative_expr.mul_op opt_nl unary_expr 

	DIV  shift 98
	MOD  shift 99
	MUL  shift 97
	POW  shift 100
	.  reduce 47 (src line 266)

	mul_op  goto 96

state 45
	id_expr:  ID.    (83)

	.  reduce 83 (src line 418)


state 46
	stmt:  CONST id_expr.concat_expr 
	mark_pos: .    (108)

	.  reduce 108 (src line 574)

	concat_expr  goto 101
	regex_pattern  goto 42
	mark_pos  goto 88

state 47
	conditional_statement:  logical_expr compound_statement.ELSE compound_statement 
	conditional_statement:  logical_expr compound_statement.    (15)

	ELSE  shift 102
	.  reduce 15 (src line 137)


state 48
	logical_expr:  logical_expr logical_op.opt_nl bitwise_expr 
	logical_expr:  logical_expr logical_op.opt_nl match_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 103

state 49
	compound_statement:  LCURLY.stmt_list RCURLY 
	stmt_list: .    (2)

	.  reduce 2 (src line 87)

	stmt_list  goto 105

state 50
	logical_op:  AND.    (28)

	.  reduce 28 (src line 201)


state 51
	logical_op:  OR.    (29)

	.  reduce 29 (src line 204)


state 52
	conditional_statement:  OTHERWISE compound_statement.    (16)

	.  reduce 16 (src line 145)


state 53
	expression_statement:  expr NL.    (18)

	.  reduce 18 (src line 155)


state 54
	declaration:  hide_spec type_spec.declarator 

	STRING  shift 108
	ID  shift 107
	.  error

	declarator  goto 106

state 55
	type_spec:  COUNTER.    (94)

	.  reduce 94 (src line 490)


state 56
	type_spec:  GAUGE.    (95)

	.  reduce 95 (src line 495)


state 57
	type_spec:  TIMER.    (96)

	.  reduce 96 (src line 499)


state 58
	type_spec:  TEXT.    (97)

	.  reduce 97 (src line 503)


state 59
	regex_pattern:  mark_pos DIV.in_regex REGEX DIV 
	in_regex: .    (109)

	.  reduce 109 (src line 584)

	in_regex  goto 109

state 60
	definition:  mark_pos DEF.ID compound_statement 

	ID  shift 110
	.  error


state 61
	decoration_statement:  mark_pos DECO.compound_statement 

	LCURLY  shift 49
	.  error

	compound_statement  goto 111

state 62
	postfix_expr:  postfix_expr.postfix_op 
	delete_statement:  DEL postfix_expr.AFTER DURATIONLITERAL 
	delete_statement:  DEL postfix_expr.    (107)

	AFTER  shift 112
	INC  shift 90
	DEC  shift 91
	.  reduce 107 (src line 565)

	postfix_op  goto 89

state 63
	postfix_expr:  primary_expr.    (68)

	.  reduce 68 (src line 351)


state 64
	bitwise_expr:  bitwise_expr bitwise_op.opt_nl rel_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 113

state 65
	bitwise_op:  BITAND.    (32)

	.  reduce 32 (src line 217)


state 66
	bitwise_op:  BITOR.    (33)

	.  reduce 33 (src line 220)


state 67
	bitwise_op:  XOR.    (34)

	.  reduce 34 (src line 222)


state 68
	rel_expr:  rel_expr rel_op.opt_nl shift_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 114

state 69
	rel_op:  LT.    (37)

	.  reduce 37 (src line 235)


state 70
	rel_op:  GT.    (38)

	.  reduce 38 (src line 238)


state 71
	rel_op:  LE.    (39)

	.  reduce 39 (src line 240)


state 72
	rel_op:  GE.    (40)

	.  reduce 40 (src line 242)


state 73
	rel_op:  EQ.    (41)

	.  reduce 41 (src line 244)


state 74
	rel_op:  NE.    (42)

	.  reduce 42 (src line 246)


state 75
	match_expr:  primary_expr match_op.opt_nl pattern_expr 
	match_expr:  primary_expr match_op.opt_nl primary_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 115

state 76
	match_op:  MATCH.    (52)

	.  reduce 52 (src line 288)


state 77
	match_op:  NOT_MATCH.    (53)

	.  reduce 53 (src line 291)


state 78
	assign_expr:  unary_expr ASSIGN.opt_nl logical_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 116

state 79
	assign_expr:  unary_expr ADD_ASSIGN.opt_nl logical_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 117

state 80
	shift_expr:  shift_expr shift_op.opt_nl additive_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 118

state 81
	shift_op:  SHL.    (45)

	.  reduce 45 (src line 259)


state 82
	shift_op:  SHR.    (46)

	.  reduce 46 (src line 262)


state 83
	concat_expr:  concat_expr PLUS.opt_nl regex_pattern 
	concat_expr:  concat_expr PLUS.opt_nl id_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 119

state 84
	indexed_expr:  indexed_expr LSQUARE.arg_expr_list RSQUARE 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	arg_expr_list  goto 120
	primary_expr  goto 63
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 121
	indexed_expr  goto 31
	id_expr  goto 43

state 85
	primary_expr:  BUILTIN LPAREN.RPAREN 
	primary_expr:  BUILTIN LPAREN.arg_expr_list RPAREN 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	RPAREN  shift 123
	.  error

	arg_expr_list  goto 124
	primary_expr  goto 63
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 121
	indexed_expr  goto 31
	id_expr  goto 43

state 86
	primary_expr:  LPAREN expr.RPAREN 

	RPAREN  shift 125
	.  error


state 87
	assign_expr:  logical_expr.    (21)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 50
	OR  shift 51
	.  reduce 21 (src line 171)

	logical_op  goto 48

state 88
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 

	DIV  shift 59
	.  error


state 89
	postfix_expr:  postfix_expr postfix_op.    (69)

	.  reduce 69 (src line 354)


state 90
	postfix_op:  INC.    (70)

	.  reduce 70 (src line 360)


state 91
	postfix_op:  DEC.    (71)

	.  reduce 71 (src line 363)


state 92
	unary_expr:  NOT unary_expr.    (67)

	.  reduce 67 (src line 345)


state 93
	additive_expr:  additive_expr add_op.opt_nl multiplicative_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 126

state 94
	add_op:  PLUS.    (58)

	.  reduce 58 (src line 315)


state 95
	add_op:  MINUS.    (59)

	.  reduce 59 (src line 318)


state 96
	multiplicative_expr:  multiplicative_expr mul_op.opt_nl unary_expr 
	opt_nl: .    (110)

	NL  shift 104
	.  reduce 110 (src line 594)

	opt_nl  goto 127

state 97
	mul_op:  MUL.    (62)

	.  reduce 62 (src line 331)


state 98
	mul_op:  DIV.    (63)

	.  reduce 63 (src line 334)


state 99
	mul_op:  MOD.    (64)

	.  reduce 64 (src line 336)


state 100
	mul_op:  POW.    (65)

	.  reduce 65 (src line 338)


state 101
	stmt:  CONST id_expr concat_expr.    (11)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 83
	.  reduce 11 (src line 118)


state 102
	conditional_statement:  logical_expr compound_statement ELSE.compound_statement 

	LCURLY  shift 49
	.  error

	compound_statement  goto 128

state 103
	logical_expr:  logical_expr logical_op opt_nl.bitwise_expr 
	logical_expr:  logical_expr logical_op opt_nl.match_expr 
	mark_pos: .    (108)

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  reduce 108 (src line 574)

	primary_expr  goto 27
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 129
	indexed_expr  goto 31
	id_expr  goto 43
	concat_expr  goto 30
	pattern_expr  goto 26
	regex_pattern  goto 42
	match_expr  goto 130
	mark_pos  goto 88

state 104
	opt_nl:  NL.    (111)

	.  reduce 111 (src line 596)


state 105
	stmt_list:  stmt_list.stmt 
	compound_statement:  LCURLY stmt_list.RCURLY 
	hide_spec: .    (88)
	mark_pos: .    (108)

	INVALID  shift 13
	CONST  shift 11
	HIDDEN  shift 24
	DEF  reduce 108 (src line 574)
	DEL  shift 20
	NEXT  shift 10
	OTHERWISE  shift 15
	STOP  shift 12
	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	DECO  reduce 108 (src line 574)
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	DIV  reduce 108 (src line 574)
	NOT  shift 40
	RCURLY  shift 131
	LPAREN  shift 36
	NL  shift 16
	.  reduce 88 (src line 458)

	stmt  goto 3
	conditional_statement  goto 4
	expression_statement  goto 5
	expr  goto 17
	primary_expr  goto 27
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 28
	assign_expr  goto 23
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 21
	logical_expr  goto 14
	indexed_expr  goto 31
	id_expr  goto 43
	concat_expr  goto 30
	pattern_expr  goto 26
	declaration  goto 6
	definition  goto 7
	decoration_statement  goto 8
	regex_pattern  goto 42
	match_expr  goto 22
	delete_statement  goto 9
	hide_spec  goto 18
	mark_pos  goto 19

state 106
	declaration:  hide_spec type_spec declarator.    (87)
	declarator:  declarator.by_spec 
	declarator:  declarator.as_spec 

	AS  shift 135
	BY  shift 134
	.  reduce 87 (src line 448)

	as_spec  goto 133
	by_spec  goto 132

state 107
	declarator:  ID.    (92)

	.  reduce 92 (src line 480)


state 108
	declarator:  STRING.    (93)

	.  reduce 93 (src line 484)


state 109
	regex_pattern:  mark_pos DIV in_regex.REGEX DIV 

	REGEX  shift 136
	.  error


state 110
	definition:  mark_pos DEF ID.compound_statement 

	LCURLY  shift 49
	.  error

	compound_statement  goto 137

state 111
	decoration_statement:  mark_pos DECO compound_statement.    (105)

	.  reduce 105 (src line 553)


state 112
	delete_statement:  DEL postfix_expr AFTER.DURATIONLITERAL 

	DURATIONLITERAL  shift 138
	.  error


state 113
	bitwise_expr:  bitwise_expr bitwise_op opt_nl.rel_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	rel_expr  goto 139
	shift_expr  goto 29
	indexed_expr  goto 31
	id_expr  goto 43

state 114
	rel_expr:  rel_expr rel_op opt_nl.shift_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	shift_expr  goto 140
	indexed_expr  goto 31
	id_expr  goto 43

state 115
	match_expr:  primary_expr match_op opt_nl.pattern_expr 
	match_expr:  primary_expr match_op opt_nl.primary_expr 
	mark_pos: .    (108)

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	LPAREN  shift 36
	.  reduce 108 (src line 574)

	primary_expr  goto 142
	indexed_expr  goto 31
	id_expr  goto 43
	concat_expr  goto 30
	pattern_expr  goto 141
	regex_pattern  goto 42
	mark_pos  goto 88

state 116
	assign_expr:  unary_expr ASSIGN opt_nl.logical_expr 
	mark_pos: .    (108)

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  reduce 108 (src line 574)

	primary_expr  goto 27
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 21
	logical_expr  goto 143
	indexed_expr  goto 31
	id_expr  goto 43
	concat_expr  goto 30
	pattern_expr  goto 26
	regex_pattern  goto 42
	match_expr  goto 22
	mark_pos  goto 88

state 117
	assign_expr:  unary_expr ADD_ASSIGN opt_nl.logical_expr 
	mark_pos: .    (108)

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  reduce 108 (src line 574)

	primary_expr  goto 27
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 21
	logical_expr  goto 144
	indexed_expr  goto 31
	id_expr  goto 43
	concat_expr  goto 30
	pattern_expr  goto 26
	regex_pattern  goto 42
	match_expr  goto 22
	mark_pos  goto 88

state 118
	shift_expr:  shift_expr shift_op opt_nl.additive_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	multiplicative_expr  goto 44
	additive_expr  goto 145
	postfix_expr  goto 39
	unary_expr  goto 122
	indexed_expr  goto 31
	id_expr  goto 43

state 119
	concat_expr:  concat_expr PLUS opt_nl.regex_pattern 
	concat_expr:  concat_expr PLUS opt_nl.id_expr 
	mark_pos: .    (108)

	ID  shift 45
	.  reduce 108 (src line 574)

	id_expr  goto 147
	regex_pattern  goto 146
	mark_pos  goto 88

state 120
	indexed_expr:  indexed_expr LSQUARE arg_expr_list.RSQUARE 
	arg_expr_list:  arg_expr_list.COMMA bitwise_expr 

	RSQUARE  shift 148
	COMMA  shift 149
	.  error


state 121
	bitwise_expr:  bitwise_expr.bitwise_op opt_nl rel_expr 
	arg_expr_list:  bitwise_expr.    (84)

	BITAND  shift 65
	XOR  shift 67
	BITOR  shift 66
	.  reduce 84 (src line 425)

	bitwise_op  goto 64

state 122
	multiplicative_expr:  unary_expr.    (60)

	.  reduce 60 (src line 322)


state 123
	primary_expr:  BUILTIN LPAREN RPAREN.    (73)

	.  reduce 73 (src line 370)


state 124
	primary_expr:  BUILTIN LPAREN arg_expr_list.RPAREN 
	arg_expr_list:  arg_expr_list.COMMA bitwise_expr 

	RPAREN  shift 150
	COMMA  shift 149
	.  error


state 125
	primary_expr:  LPAREN expr RPAREN.    (78)

	.  reduce 78 (src line 390)


state 126
	additive_expr:  additive_expr add_op opt_nl.multiplicative_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	multiplicative_expr  goto 151
	postfix_expr  goto 39
	unary_expr  goto 122
	indexed_expr  goto 31
	id_expr  goto 43

state 127
	multiplicative_expr:  multiplicative_expr mul_op opt_nl.unary_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	postfix_expr  goto 39
	unary_expr  goto 152
	indexed_expr  goto 31
	id_expr  goto 43

state 128
	conditional_statement:  logical_expr compound_statement ELSE compound_statement.    (14)

	.  reduce 14 (src line 132)


state 129
	logical_expr:  logical_expr logical_op opt_nl bitwise_expr.    (26)
	bitwise_expr:  bitwise_expr.bitwise_op opt_nl rel_expr 

	BITAND  shift 65
	XOR  shift 67
	BITOR  shift 66
	.  reduce 26 (src line 191)

	bitwise_op  goto 64

state 130
	logical_expr:  logical_expr logical_op opt_nl match_expr.    (27)

	.  reduce 27 (src line 195)


state 131
	compound_statement:  LCURLY stmt_list RCURLY.    (19)

	.  reduce 19 (src line 159)


state 132
	declarator:  declarator by_spec.    (90)

	.  reduce 90 (src line 469)


state 133
	declarator:  declarator as_spec.    (91)

	.  reduce 91 (src line 475)


state 134
	by_spec:  BY.by_expr_list 

	STRING  shift 155
	ID  shift 154
	.  error

	by_expr_list  goto 153

state 135
	as_spec:  AS.STRING 

	STRING  shift 156
	.  error


state 136
	regex_pattern:  mark_pos DIV in_regex REGEX.DIV 

	DIV  shift 157
	.  error


state 137
	definition:  mark_pos DEF ID compound_statement.    (104)

	.  reduce 104 (src line 546)


state 138
	delete_statement:  DEL postfix_expr AFTER DURATIONLITERAL.    (106)

	.  reduce 106 (src line 560)


state 139
	bitwise_expr:  bitwise_expr bitwise_op opt_nl rel_expr.    (31)
	rel_expr:  rel_expr.rel_op opt_nl shift_expr 

	LT  shift 69
	GT  shift 70
	LE  shift 71
	GE  shift 72
	EQ  shift 73
	NE  shift 74
	.  reduce 31 (src line 211)

	rel_op  goto 68

state 140
	rel_expr:  rel_expr rel_op opt_nl shift_expr.    (36)
	shift_expr:  shift_expr.shift_op opt_nl additive_expr 

	SHL  shift 81
	SHR  shift 82
	.  reduce 36 (src line 229)

	shift_op  goto 80

state 141
	match_expr:  primary_expr match_op opt_nl pattern_expr.    (50)

	.  reduce 50 (src line 278)


state 142
	match_expr:  primary_expr match_op opt_nl primary_expr.    (51)

	.  reduce 51 (src line 282)


state 143
	assign_expr:  unary_expr ASSIGN opt_nl logical_expr.    (22)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 50
	OR  shift 51
	.  reduce 22 (src line 176)

	logical_op  goto 48

state 144
	assign_expr:  unary_expr ADD_ASSIGN opt_nl logical_expr.    (23)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 50
	OR  shift 51
	.  reduce 23 (src line 180)

	logical_op  goto 48

state 145
	shift_expr:  shift_expr shift_op opt_nl additive_expr.    (44)
	additive_expr:  additive_expr.add_op opt_nl multiplicative_expr 

	MINUS  shift 95
	PLUS  shift 94
	.  reduce 44 (src line 253)

	add_op  goto 93

state 146
	concat_expr:  concat_expr PLUS opt_nl regex_pattern.    (56)

	.  reduce 56 (src line 305)


state 147
	concat_expr:  concat_expr PLUS opt_nl id_expr.    (57)

	.  reduce 57 (src line 309)


state 148
	indexed_expr:  indexed_expr LSQUARE arg_expr_list RSQUARE.    (82)

	.  reduce 82 (src line 409)


state 149
	arg_expr_list:  arg_expr_list COMMA.bitwise_expr 

	BUILTIN  shift 32
	STRING  shift 35
	CAPREF  shift 33
	CAPREF_NAMED  shift 34
	ID  shift 45
	INTLITERAL  shift 37
	FLOATLITERAL  shift 38
	NOT  shift 40
	LPAREN  shift 36
	.  error

	primary_expr  goto 63
	multiplicative_expr  goto 44
	additive_expr  goto 41
	postfix_expr  goto 39
	unary_expr  goto 122
	rel_expr  goto 25
	shift_expr  goto 29
	bitwise_expr  goto 158
	indexed_expr  goto 31
	id_expr  goto 43

state 150
	primary_expr:  BUILTIN LPAREN arg_expr_list RPAREN.    (74)

	.  reduce 74 (src line 374)


state 151
	additive_expr:  additive_expr add_op opt_nl multiplicative_expr.    (48)
	multiplicative_expr:  multiplicative_expr.mul_op opt_nl unary_expr 

	DIV  shift 98
	MOD  shift 99
	MUL  shift 97
	POW  shift 100
	.  reduce 48 (src line 269)

	mul_op  goto 96

state 152
	multiplicative_expr:  multiplicative_expr mul_op opt_nl unary_expr.    (61)

	.  reduce 61 (src line 325)


state 153
	by_spec:  BY by_expr_list.    (98)
	by_expr_list:  by_expr_list.COMMA ID 
	by_expr_list:  by_expr_list.COMMA STRING 

	COMMA  shift 159
	.  reduce 98 (src line 509)


state 154
	by_expr_list:  ID.    (99)

	.  reduce 99 (src line 516)


state 155
	by_expr_list:  STRING.    (100)

	.  reduce 100 (src line 522)


state 156
	as_spec:  AS STRING.    (103)

	.  reduce 103 (src line 539)


state 157
	regex_pattern:  mark_pos DIV in_regex REGEX DIV.    (86)
